ariang-allinone: rebuild

--- a/archlinuxcn/linux-dctxmei510/README
+++ b/archlinuxcn/linux-dctxmei510/README
@@ -5,5 +5,5 @@ make nconfig:
      default bbr: DEFAULT_BBR [=y]
 
 Steps to apply the patch:
-1. patch -p3 -i config.5.10.45.patch
+1. patch -p3 -i config-5.10.45.patch
 2. updpkgsums
